[package]
name = "socks5-rust"
version = "0.1.0"
authors = ["yahaa <1477765176@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.2", features = ["full", "tracing"] }
clap = { version = "2", features = ["wrap_help", "suggestions"] }
anyhow = "1.0.21"
log = "0.4.1"
env_logger = "0.7.1"
futures = "0.3"
chrono="0.4.0"


